--- a/Acebootcamp/Labs/Lab6/lab6.html
+++ b/Acebootcamp/Labs/Lab6/lab6.html
@@ -3,6 +3,8 @@
 
 <head>
 	<title>Lab 6 Favicon</title>
+	<link rel="icon" type="image/png" href="tcm.png">
+
 </head>
 
 <body style="background-color: lightblue;">
