--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
 	<li> <a href="Acebootcamp/Labs/Lab7/lab7.html">Lab 7 </a> </li>
 
+<li> <a href="Acebootcamp/Labs/Lab8/lab8.html">Lab 8 </a> </li>
+
+<li> <a href="Acebootcamp/Labs/Lab9/lab9.html">Lab 9 </a> </li>
+
+<li> <a href="Acebootcamp/Labs/Lab10/lab10.html">Lab 10 </a> </li>
 
 
 
