--- a/Acebootcamp/Labs/Lab7/lab7.html
+++ b/Acebootcamp/Labs/Lab7/lab7.html
@@ -2,22 +2,29 @@
 <html>
 
 <head>
+	<link rel="icon" type="image/png" href="tcm.png">
+	<link rel="stylesheet" href="lab7.css" type="text/css">
 	<title>Lab 7</title>
+
 </head>
 
-<body style="background-color: pink">
+<body>
 	<center>
 		<h1>QCC Bootcamp Labs</h1>
+
+    <br>
 		<table border="12px">
-			<th><a href="https://ace2021lv1.tajbihahossain.repl.co/ACE_BootCamp/Labs/Lab%201/lab%201%20by%20Tajbiha.html">Lab 1</a></th>
-			<th><a href="https://ace2021lv1.cristinazurita.repl.co/Web/Lab2/Lab2%20Text%20formatting,%20inserting%20images,%20Attributes%20and%20values%20.html">Lab
+			<th><a href="https://acebootcamp21.mikkhaelyap.repl.co/Acebootcamp/Labs/Lab1/lab1.html">Lab 1</a></th>
+			
+      <!-- need to update 2,4,5 and 7 home page image -->
+      <th><a href="https://ace2021lv1.cristinazurita.repl.co/Web/Lab2/Lab2%20Text%20formatting,%20inserting%20images,%20Attributes%20and%20values%20.html">Lab
 					2
 				</a></th>
-			<th><a href="https://acebootcamp2021.mikkhaelyap.repl.co/AceBootcamp2021/Lab3/lab3.html">Lab 3</a></th>
-			<th><a href="https://ace2021lv1.tajbihahossain.repl.co/ACE_BootCamp/Labs/Lab%204/Lab%204%20by%20Tajbiha.html">Lab 4</a></th>
-			<th><a href="https://ace2021lv1.cristinazurita.repl.co/Web/Lab5/Lab5%20BR3.html">Lab 5</a></th>
-			<th><a href="https://acebootcamp2021.mikkhaelyap.repl.co/AceBootcamp2021/Lab7/lab7.html">Lab 7</a></th>
-			<tr>
+			
+      
+      <th><a href="https://acebootcamp2021.mikkhaelyap.repl.co/AceBootcamp2021/Lab3/lab3.html">Lab 3</a></th>
+
+     <tr>
 				<td>
 					<img src="Lab1pic.JPG" alt="Lab 1 Preview" width="400px">
           </td>
@@ -27,20 +34,49 @@
           <td>
             <img src="Lab3pic.JPG" alt="Lab 3 Preview" width="400px">
           </td>
-          <td>
+
+
+</tr>
+		</table>
+
+<br>
+
+	<table border="12px">
+      <th><a href="https://ace2021lv1.tajbihahossain.repl.co/ACE_BootCamp/Labs/Lab%204/Lab%204%20by%20Tajbiha.html">Lab 4</a></th>
+
+			<th><a href="https://ace2021lv1.cristinazurita.repl.co/Web/Lab5/Lab5%20BR3.html">Lab 5</a></th>
+
+			<th><a href="https://acebootcamp21.mikkhaelyap.repl.co/Acebootcamp/Labs/Lab6/lab6.html">Lab 6</a></th>
+
+<tr>
+<td>
             <img src="Lab4Pic.jpg" alt="Lab 4 Preview" width="400px">
           </td>
-          <td>
-            <img src="Lab5Pic.jpg" alt="Lab 5 Preview" width="400px">
-          </td>
+          <td><img src="Lab5Pic.jpg" alt="Lab 5 Preview" width="400px"></td>
+<td><img src="Labpic6.JPG" alt="Lab 6 Preview" width="400px"></td>
 
-          <td>
-            <img src="lab7.jpg" alt="Lab 7 Preview" width="400px">
-          </td>
+
+</tr>
+      </table>
+
+
+
+<br>
+
+
+	<table border="12px">
+
+			<th><a href="https://acebootcamp21.mikkhaelyap.repl.co/Acebootcamp/Labs/Lab7/lab7.html">Lab 7</a></th>
+
+<tr>
+	
+<td><img src="lab7.jpg" alt="Lab 7 Preview" width="400px"></td>
 
 
         </tr>
       </table>
+
+
     </center>
   </body>
 </html>
