--- a/Acebootcamp/Labs/Lab8/lab8.html
+++ b/Acebootcamp/Labs/Lab8/lab8.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title> Lab 8 </title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+	<title> Lab 8 </title>
+	<link rel="icon" type="image/png" href="tcm.png">
+	<style> 
+/*body background details*/
+body{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-image: url("Invoker.jpg");
+  background-repeat:no-repeat;
+  background-size:cover;
+  width:100%;
+  padding:12%;
+  margin:auto;
+  text-align:justify;
+  font-size:30px;
+  color: azure
+  
+  }
+
+
+
+
+/*styles for my headers*/
+h1 , h2 {color: gold}
+h3 {color: greenyellow}
+h4, h5 {color: red}
+h6 {color: bisque}
+
+/*styles for my div*/
+div { 
+border: 5px magenta solid;
+border-radius:auto;
+background-color:wheat;
+opacity: 80%;
+padding: 10px
+
+}
+
+/*paragraph design*/
+#p1 {
+color: green;
+font-family: 'Times New Roman', Times, serif;
+font-size: 25px;
+}
+
+#p2 {
+color: orange;
+font-family: 'Times New Roman', Times, serif;
+font-size: 25px;
+}
+
+#p3 {
+color: pink;
+font-family: 'Times New Roman', Times, serif;
+font-size: 25px;
+</style>
+
+</head>
+
+
+<body>
+	<center>
+		<h1> Micro-Credential </h1>
+		<h2> College </h2>
+		<h3> 05/23/2021 </h3>
+		<h4> Lab 8 Lorem ipsum dolor</h4>
+		<h5> by </h5>
+		<h6> Mikkhael Yap </h6>
+		<br>
+
+	<div>
+    <h3> Paragraph One</h3>
+		<p id="p1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Donec et odio pellentesque diam volutpat commodo sed. Turpis tincidunt id aliquet risus. Tincidunt augue interdum velit euismod in pellentesque. Vulputate enim nulla aliquet porttitor lacus luctus. Turpis nunc eget lorem dolor sed. Scelerisque felis imperdiet proin fermentum leo vel orci. Dignissim sodales ut eu sem integer vitae justo eget magna. Amet risus nullam eget felis eget nunc lobortis mattis. Sed libero enim sed faucibus. Suscipit adipiscing bibendum est ultricies integer quis. </p>
+    <br>
+	</div>
+
+  <div>
+    <h3> Paragraph Two </h3>
+		<p id="p2"> Mattis ullamcorper velit sed ullamcorper morbi. Nisi vitae suscipit tellus mauris a diam. Scelerisque felis imperdiet proin fermentum leo vel. Risus commodo viverra maecenas accumsan lacus vel. Dignissim convallis aenean et tortor. Eget mi proin sed libero enim sed. Felis eget velit aliquet sagittis id consectetur. Bibendum enim facilisis gravida neque. Dolor purus non enim praesent elementum facilisis leo vel fringilla. Hac habitasse platea dictumst vestibulum. Commodo sed egestas egestas fringilla. Placerat duis ultricies lacus sed turpis tincidunt. Risus quis varius quam quisque id. Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum. Rutrum tellus pellentesque eu tincidunt tortor. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Ultrices dui sapien eget mi. Sed odio morbi quis commodo odio aenean sed adipiscing. Nec ultrices dui sapien eget. </p>
+    <br>
+  </div>
+
+  <div>
+    <h3> Paragraph Three </h3>
+    <p id="p3"> Feugiat in fermentum posuere urna nec tincidunt praesent semper feugiat. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Integer eget aliquet nibh praesent tristique magna. Urna nec tincidunt praesent semper feugiat. Bibendum at varius vel pharetra vel turpis nunc eget lorem. Aliquet eget sit amet tellus cras. Id donec ultrices tincidunt arcu. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Quam id leo in vitae turpis massa sed elementum. Neque convallis a cras semper auctor. Integer malesuada nunc vel risus commodo. Augue mauris augue neque gravida in fermentum et sollicitudin ac. Vivamus arcu felis bibendum ut tristique et egestas quis. Luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Dictumst quisque sagittis purus sit. Praesent tristique magna sit amet. Tellus integer feugiat scelerisque varius morbi enim. Ut morbi tincidunt augue interdum velit euismod in pellentesque massa. Sem et tortor consequat id porta nibh venenatis cras.
+    </p>
+    <br>
+  </div>
+
+
+
+
+
+
+
+
+</center>
+
+
+
+</body>
+
 </html>
