--- a/index.html
+++ b/index.html
@@ -5,36 +5,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>ACE QCC BootCamp</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>s
+<body>
 
 	<h1>My Page</h1>
 
-
+	<li><a href="index.html"> Home </a></li>
 	<li> <a href="Acebootcamp/Labs/Lab1/lab1.html"> Lab 1 </a> </li>
-
-	<li> <a href="Acebootcamp/Labs/Lab2/lab2.html">Lab 2 </a> </li>
-
-	<li> <a href="Acebootcamp/Labs/Lab3/lab3.html">Lab 3 </a> </li>
-
-
-	<li> <a href="Acebootcamp/Labs/Lab4/lab4.html">Lab 4 </a> </li>
-
-	<li> <a href="Acebootcamp/Labs/Lab5/lab5.html">Lab 5 </a> </li>
-
-	<li> <a href="Acebootcamp/Labs/Lab6/lab6.html">Lab 6 </a> </li>
-
-
-	<li> <a href="Acebootcamp/Labs/Lab7/lab7.html">Lab 7 </a> </li>
-
-<li> <a href="Acebootcamp/Labs/Lab8/lab8.html">Lab 8 </a> </li>
-
-<li> <a href="Acebootcamp/Labs/Lab9/lab9.html">Lab 9 </a> </li>
-
-<li> <a href="Acebootcamp/Labs/Lab10/lab10.html">Lab 10 </a> </li>
-
+	<li> <a href="Acebootcamp/Labs/Lab2/lab2.html"> Lab 2 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab3/lab3.html"> Lab 3 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab4/lab4.html"> Lab 4 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab5/lab5.html"> Lab 5 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab6/lab6.html"> Lab 6 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab7/lab7.html"> Lab 7 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab8/lab8.html"> Lab 8 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab9/lab9.html"> Lab 9 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab10/lab10.html"> Lab 10 </a> </li>
+	<li> <a href="Acebootcamp/Labs/Lab11/lab11.html"> Lab 11 </a> </li>
 
 
 
