--- a/Acebootcamp/Labs/Lab9/lab9.html
+++ b/Acebootcamp/Labs/Lab9/lab9.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title> Lab 9 </title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title> Lab 9 (NavBar) </title>
+	<link href="lab9.css" rel="stylesheet" type="text/css" />
+	<link href="download.png" rel="icon" type="image/png" </head>
+
+
+
+
+
+	<body>
+		<center>
+			<h1> Micro-Credential </h1>
+			<h2> College </h2>
+			<h3> 05/23/2021 </h3>
+			<h4> Lab 9 Navigation </h4>
+			<h5> by </h5>
+			<h6> Mikkhael Yap </h6>
+			<br> <br>
+
+
+		<h1>My Navigation Bar</h1>
+    <br>
+
+
+<ul class="topnav">
+    <li class="topnav a"> <a href="../../../index.html"> Home </a></li>
+		<li class="topnav a"> <a href="../Lab1/lab1.html"> Lab 1 </a> </li>
+		<li class="topnav a"> <a href="../Lab2/lab2.html"> Lab 2 </a> </li>
+		<li class="topnav a"> <a href="../Lab3/lab3.html"> Lab 3 </a> </li>
+		<li class="topnav a"> <a href="../Lab4/lab4.html"> Lab 4 </a> </li>
+		<li class="topnav a"> <a href="../Lab5/lab5.html"> Lab 5 </a> </li>
+		<li class="topnav a"> <a href="../Lab6/lab6.html"> Lab 6 </a> </li>
+		<li class="topnav a"> <a href="../Lab7/lab7.html"> Lab 7 </a> </li>
+		<li class="topnav a"> <a href="../Lab8/lab8.html"> Lab 8 </a> </li>
+		<li class="topnav a"> <a href="../Lab9/lab9.html"> Lab 9 </a> </li>
+		<li class="topnav a"> <a href="../LabTen/lab10.html"> Lab 10 </a> </li>
+</ul>
+
+
+		</center>
+	</body>
+
+
 </html>
