--- a/Project 1/Movie1/movie1.html
+++ b/Project 1/Movie1/movie1.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Lab 10
-      
-    </title>
+    <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
