some changes on lab 10 and 11

--- a/Acebootcamp/Labs/Lab11/lab11.html
+++ b/Acebootcamp/Labs/Lab11/lab11.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
+<html lang="en">
+<head>
+<title>Lab 11 Fortune Teller:</title>
+  <link href="sample2.jpeg" rel="icon" type="image/jpg"/>
+  <link href="lab11.css" rel="stylesheet" type="text/css"/> 
+</head>
+<body>
+
+<h1 id="head"><b>Fortune Teller</b><h1>
+  
+<div>
+  <form id="future" name="future">
+           
+     Children: <input type="text" id="input1" value=""><br>
+     Partner: <input type="text" id="input2" value=""><br>
+     Location: <input type="text" id="input3" value=""><br>
+     Job: <input type="text" id="input4" value=""><br> 
+     
+  </form>  
+<div>
+<a id="button"><button onclick="myFunction()"> Please put some info and click to see your fortune!</button></a>
+<script src="lab11.js"></script>
+</body>
 </html>
