--- a/Acebootcamp/Labs/Lab9/lab9.html
+++ b/Acebootcamp/Labs/Lab9/lab9.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width">
 	<title> Lab 9 (NavBar) </title>
 	<link href="lab9.css" rel="stylesheet" type="text/css" />
-	<link href="download.png" rel="icon" type="image/png" </head>
+	<link href="download.png" rel="icon" type="image/png" />
+  </head>
 
 
 
